--- a/index.html
+++ b/index.html
@@ -1,50 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <title></title>
-  </head>
-  <body>
-    <table class="calculator">
-      <thead>
-        <tr>
-          <td><button onclick="C" class="single" id="highlight" id="clear">C</button></td>
-          <td class="single"><input type="text" id="log"></td>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- <tr>
-          <td><button onclick="C" class="single" id="highlight" id="clear">C</button></td>
-          <td class="single" id="log"><input type="text"></td>
-        </tr> -->
-        <tr>
-          <td><button onclick="7" class="single" id="seven">7</button></td>
-          <td><button onclick="8" class="single" id="eight">8</button></td>
-          <td><button onclick="9" class="single" id="nine">9</button></td>
-          <td><button onclick="/" class="single" id="operations" id="divide">/</button></td>
-        </tr>
-        <tr>
-          <td><button onclick="4" class="single" id="four">4</button></td>
-          <td><button onclick="5" class="single" id="five">5</button></td>
-          <td><button onclick="6" class="single" id="six">6</button></td>
-          <td><button onclick="X" class="single" id="operations" id="multiply">X</button></td>
-        </tr>
-        <tr>
-          <td><button onclick="1" class="single" id="one">1</button></td>
-          <td><button onclick="2" class="single" id="two">2</button></td>
-          <td><button onclick="3" class="single" id="three">3</button></td>
-          <td><button onclick="-" class="single" id="operations" id="subtract">-</button></td>
-        </tr>
-        <tr>
-          <td><button onclick="0" class="single" id="zero">0</button></td>
-          <td><button onclick="." class="single" id="highlight" id="decimal">.</button></td>
-          <td><button onclick="=" class="single" id="highlight" id="equals">=</button></td>
-          <td><button onclick="+" class="single" id="operations" id="add">+</button></td>
-        </tr>
-      </tbody>
-    </table>
-
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Golden Calculator To Divide</title>
+</head>
+<body>
+  <section class="calculator">
+    <section class="top">
+      <div class="single" id="clear">C</div>
+      <div id="entry"><input type="text" id="entryText"></div>
+    </section>
+    <section class="bottom">
+      <div class="single" id="seven">7</div>
+      <div class="single" id="eight">8</div>
+      <div class="single" id="nine">9</div>
+      <div class="operations" id="divide">/</div>
+      <div class="single" id="four">4</div>
+      <div class="single" id="five">5</div>
+      <div class="single" id="six">6</div>
+      <div class="operations" id="multiply">*</div>
+      <div class="single" id="one">1</div>
+      <div class="single" id="two">2</div>
+      <div class="single" id="three">3</div>
+      <div class="operations" id="subtract">-</div>
+      <div class="single" id="zero">0</div>
+      <div class="single" id="decimal">.</div>
+      <div class="single" id="equals">=</div>
+      <div class="operations" id="add">+</div>
+    </section>
+  </section>
   <script src="main.js"></script>
-  </body>
+</body>
 </html>
