--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 <body>
   <section class="calculator">
     <section class="top">
-      <div class="single" id="clear">C</div>
+      <button onclick="clearDisplay()" id="clear">C</button>
       <div id="entry"><input type="text" id="entryText"></div>
     </section>
     <section class="bottom">
       <div class="single" id="seven">7</div>
       <div class="single" id="eight">8</div>
       <div class="single" id="nine">9</div>
-      <div class="operations" id="divide">/</div>
+      <button onclick="operations()" class="operations" id="divide">/</button>
       <div class="single" id="four">4</div>
       <div class="single" id="five">5</div>
       <div class="single" id="six">6</div>
-      <div class="operations" id="multiply">*</div>
+      <button onclick="operations()" class="operations" id="multiply">*</button>
       <div class="single" id="one">1</div>
       <div class="single" id="two">2</div>
       <div class="single" id="three">3</div>
-      <div class="operations" id="subtract">-</div>
+      <button onclick="operations()" class="operations" id="subtract">-</button>
       <div class="single" id="zero">0</div>
       <div class="single" id="decimal">.</div>
-      <div class="single" id="equals">=</div>
-      <div class="operations" id="add">+</div>
+      <button onclick="total()" id="equals">=</button>
+      <button onclick="operations()" class="operations" id="add">+</button>
     </section>
   </section>
   <script src="main.js"></script>
