--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>Golden Calculator To Divide</title>
@@ -8,7 +8,7 @@
 <body>
   <section class="calculator">
     <section class="top">
-      <button onclick="clearDisplay()" id="clear">C</button>
+      <button onclick="clearEntry()" id="clear">C</button>
       <div id="entry"><input type="text" id="entryText"></div>
     </section>
     <section class="bottom">
